--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,11 @@
 /node_modules
 /.pnp
 .pnp.*
+.npm/
+.yarn/cache/
+.yarn/unplugged/
+.yarn/build-state.yml
+.yarn/install-state.gz
 .yarn/*
 !.yarn/patches
 !.yarn/plugins
@@ -16,22 +21,28 @@
 # next.js
 /.next/
 /out/
+.turbo/
 
 # production
 /build
 
 # misc
 .DS_Store
+Thumbs.db
 *.pem
+.cache/
 
 # debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
+*.log
 
 # env files (can opt-in for committing if needed)
+.env
 .env*
+.venv/
 
 # vercel
 .vercel
@@ -39,3 +50,13 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# editors / workspace
+.idea/
+.vscode/*
+!.vscode/extensions.json
+!.vscode/launch.json
+!.vscode/settings.json
+!.vscode/tasks.json
+*.swp
+*.swo
